# ingestor-dados-twitter

./: README.md  databricks.py  handler.py  pyproject.toml  twitter.py
